--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Эвенский язык</title>
     <style>
-      .class {
+      .uzor {
         width: 100%;
 	height: 70px;
 	backgroung-image: url(img/uzor.png);
