--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       .uzor {
         width: 100%;
-	height: 70px;
+	height: 100px;
 	backgroung-image: url(img/uzor.png);
 	background-repeat: repeat-x;
        }
@@ -16,6 +16,6 @@
   <body>
     <div class="uzor">
     </div>
-    <img src="img/title.png" style="position:relative; left:900px;">
+    <img src="img/title.png" style="position:relative; top:30px; left:900px;">
   </body>
 </html>
