--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 	backgroung-image: url(img/uzor.png);
 	background-repeat: repeat-x;
        }
+	    
+      .qblock {
+	position: relative;
+	top: 50px;
+	width: 500px;
+	height: 900px;
+	background-color: #e2e2e2;
+       }
 	  </style>
   </head>
   <body>
