--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Эвенский язык</title>
     <style>
       .uzor {
+	position: absolute;
+	width: 100%;
 	height: 100px;
 	backgroung-image: url(img/uzor.png);
 	background-repeat: repeat-x;
