--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Эвенский язык</title>
     <style>
       .uzor {
-	position: absolute;
+	position: relative;
 	width: 100%;
 	height: 100px;
 	backgroung-image: url(img/uzor.png);
