--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	position: relative;
 	width: 100%;
 	height: 100px;
-	backgroung-image: url(img/uzor.png);
-	background-repeat: repeat-x;
+	backgroung-image: url(img/uzor2.png);
        }
 	    
       .qblock {
