--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       .uzor {
 	position: relative;
-	width: 100%;
+	width: 1000px;
 	height: 100px;
 	backgroung-image: url(img/uzor2.png);
        }
