--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	position: relative;
 	width: 1000px;
 	height: 100px;
-	backgroung-image: url(img/uzor2.png);
+	backgroung: url(img/uzor2.png) repeat-x #ffffff;
        }
 	    
       .qblock {
