--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
     <meta charset="utf-8">
     <title>Эвенский язык</title>
     <style>
-      .uzor {
-	position: relative;
-	width: 1000px;
-	height: 1000px;
-	backgroung: url(img/uzor1.png) repeat-x #ffffff;
-       }
-	    
       .qblock {
 	position: relative;
 	top: 50px;
@@ -23,8 +16,7 @@
     </style>
   </head>
   <body>
-    <div class="uzor">
-    </div>
+    <div style="height: 100px; width:1005%; background-image: url(img/uzor.png); background-repeat: repeat-x;"
     <img src="img/title.png" style="position:relative; top:30px; left:900px;">
   </body>
 </html>
