--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <div style="height: 100px; width:1005%; background-image: url(img/uzor.png); background-repeat: repeat-x;"
+    <div style="height: 100px; width:1005%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
     <img src="img/title.png" style="position:relative; top:30px; left:900px;">
   </body>
 </html>
