--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   <body>
     <div style="height: 100px; width:1005%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
     <img src="img/title.png" style="position:relative; top:30px; left:900px;">
+    <div class="qblock" style="left: 100px"></div>
   </body>
 </html>
