--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </style>
   </head>
   <body>
-    <div style="height: 100px; width:1005%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
-    <img src="img/title.png" style="position:relative; top:30px; left:900px;">
+    <div style="height: 160px; width:1005%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
+    <img src="img/title.png" style="position:relative; top:30px; left:900px; height:200%; width: 200%;">
     <div class="qblock" style="left: 100px"></div>
   </body>
 </html>
