--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <body>
     <div style="height: 160px; width:1005%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
     <img src="img/title.png" style="position:relative; top:30px; left:750px; height:45%; width: 45%;">
-    <div class="qblock" style="left: 100px"></div>
+    <div class="qblock" style="left: 100px">
+      <img src="img/one.png" style="position:relative; align: center; top: 50px; width: 500px; height: 500 px;">
+    </div>
   </body>
 </html>
