--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       .qblock {
 	position: relative;
-	top: 200px;
+	top: 150px;
 	width: 1000px;
 	height: 1000px;
 	background-color: #e2e2e2;
@@ -19,7 +19,7 @@
     <div style="height: 160px; width:1005%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
     <img src="img/title.png" style="position:relative; top:30px; left:750px; height:45%; width: 45%;">
     <div class="qblock" style="left: 100px">
-      <img src="img/one.png" style="position:relative; align: center; top: 50px; width: 500px; height: 500 px;">
+      <img src="img/one.jpg" style="position:relative; align: center; top: 100px; width: 500px; height: 500px;">
     </div>
   </body>
 </html>
