--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Эвенский язык</title>
     <style>
       .qblock {
+	padding: 100px;
 	position: relative;
 	top: 150px;
 	width: 1000px;
@@ -16,10 +17,10 @@
     </style>
   </head>
   <body>
-    <div style="height: 160px; width:1005%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
+    <div style="height: 160px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
     <img src="img/title.png" style="position:relative; top:30px; left:750px; height:45%; width: 45%;">
     <div class="qblock" style="left: 100px">
-      <img src="img/one.jpg" style="position:relative; align: center; top: 100px; width: 500px; height: 500px;">
+      <img src="img/one.jpg" style="position:relative; width: 800px; height: 800px;">
     </div>
   </body>
 </html>
