--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Эвенский язык</title>
+    <title>Эвенский опросник</title>
     <style>
       .qblock {
-	padding: 100px;
+	padding: 200px;
 	position: relative;
 	top: 150px;
 	width: 1000px;
