--- a/index.html
+++ b/index.html
@@ -6,19 +6,28 @@
     <title>Эвенский опросник</title>
     <style>
       .qblock {
-	padding: 200px;
-	position: relative;
-	top: 150px;
-	width: 1000px;
-	height: 1000px;
-	background-color: #e2e2e2;
+        padding: 200px;
+        position: relative;
+        top: 150px;
+        width: 1000px;
+        height: 1000px;
+        background-color: #e2e2e2;
        }
-	    
+       
+      .text {
+        position: relative;
+        top: 100px;
+        font-size: 28pt;
+        font-family: sans-serif, Calibri;
+        text-color: #7a7a7a;
+        text-align: center
+      }
     </style>
   </head>
   <body>
     <div style="height: 160px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
     <img src="img/title.png" style="position:relative; top:30px; left:750px; height:45%; width: 45%;">
+    <p class="text">
     <div class="qblock" style="left: 100px">
       <img src="img/one.jpg" style="position:relative; width: 800px; height: 800px;">
     </div>
