--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <div style="height: 160px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
     <img src="img/title.png" style="position:relative; top:30px; left:750px; height:45%; width: 45%;">
-    <p class="text">
+    <p class="text">Вам предлагается пройти опрос, который поможет нам лучше узнать эвенский язык.<br> Под каждой картинкой есть окно для ввода, в котором Вам нужно написать название изображенного предмета на эвенском языке.
     <div class="qblock" style="left: 100px">
       <img src="img/one.jpg" style="position:relative; width: 700px; height: 700px;">
     </div>
