--- a/index.html
+++ b/index.html
@@ -26,10 +26,15 @@
   </head>
   <body>
     <div style="height: 160px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
-    <img src="img/title.png" style="position:relative; top:30px; left:650px; height:55%; width: 55%;">
+    <img src="img/title.png" style="position:relative; top:50px; left:650px; height:55%; width: 55%;">
     <p class="text">Вам предлагается пройти опрос, который поможет нам лучше узнать эвенский язык.<br> Под каждой картинкой есть окно для ввода, в котором Вам нужно написать название<br> изображенного предмета на эвенском языке.
     <div class="qblock" style="left: 100px">
-      <img src="img/one.jpg" style="position:relative; left:50px; top:50px; width: 700px; height: 700px;">
+      <img src="img/one.jpg" style="position:relative; left:50px; top:20px; width: 700px; height: 700px;">
+      <form action="https://www.google.com/search">
+          <p><b>Введите название предмета</b></p>
+          <input type="text" name="q">
+          <p><input type="submit"></p>
+       </form>
     </div>
   </body>
 </html>
