--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
        
       .text {
         position: relative;
-        top: 60px;
+        top:30px;
         font-size: 36pt;
         font-family: sans-serif, Calibri;
         text-color: #7a7a7a;
-        text-align: center
+        text-align: center;
       }
     </style>
   </head>
