--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         text-color: #7a7a7a;
         text-align: center;
       }
+      .text {
+        position: relative;
+        top:30px;
+        font-size: 22pt;
+        font-family: sans-serif, Calibri;
+        text-color: #ffffff;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -31,7 +39,7 @@
     <div class="qblock" style="left: 100px">
       <img src="img/one.jpg" style="position:relative; left:50px; top:20px; width: 700px; height: 700px;">
       <form action="https://www.google.com/search">
-          <p><b>Введите название предмета</b></p>
+          <p>Как называется этот предмет?</p>
           <input type="text" name="q">
           <p><input type="submit"></p>
        </form>
