--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
         text-color: #ffffff;
         text-align: center;
       }
+      
+      form {
+        position: relative;
+        top:30px;
+        left:50px;
+      }
     </style>
   </head>
   <body>
