--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         text-color: #7a7a7a;
         text-align: center;
       }
-      .text {
+      .text2 {
         position: relative;
         top:30px;
         font-size: 22pt;
@@ -45,7 +45,7 @@
     <div class="qblock" style="left: 100px">
       <img src="img/one.jpg" style="position:relative; left:50px; top:20px; width: 700px; height: 700px;">
       <form action="https://www.google.com/search">
-          <p>Как называется этот предмет?</p>
+          <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
           <p><input type="submit"></p>
        </form>
