--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>Эвенский опросник</title>
     <style>
       .qblock {
-        padding: 100px;
+        padding: 50px;
         position: relative;
         top: 150px;
-        width: 800px;
-        height: 800px;
+        width: 400px;
+        height: 400px;
         background-color: #e2e2e2;
        }
        
       .text {
         position: relative;
         top:30px;
-        font-size: 36pt;
+        font-size: 24pt;
         font-family: sans-serif, Calibri;
         text-color: #7a7a7a;
         text-align: center;
@@ -25,9 +25,9 @@
       .text2 {
         position: relative;
         top:30px;
-        font-size: 22pt;
+        font-size: 18pt;
         font-family: sans-serif, Calibri;
-        text-color: #ffffff;
+        color: #ffffff;
         text-align: center;
       }
       
@@ -39,11 +39,11 @@
     </style>
   </head>
   <body>
-    <div style="height: 160px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
-    <img src="img/title.png" style="position:relative; top:50px; left:650px; height:55%; width: 55%;">
+    <div style="height: 120px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
+    <img src="img/title.png" style="position:relative; top:30px; left:250px;">
     <p class="text">Вам предлагается пройти опрос, который поможет нам лучше узнать эвенский язык.<br> Под каждой картинкой есть окно для ввода, в котором Вам нужно написать название<br> изображенного предмета на эвенском языке.
-    <div class="qblock" style="left: 100px">
-      <img src="img/one.jpg" style="position:relative; left:50px; top:20px; width: 700px; height: 700px;">
+    <div class="qblock" style="left: 50px">
+      <img src="img/one.jpg" style="position:relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
