--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
       .text {
         position: relative;
         top:30px;
-        font-size: 24pt;
+        font-size: 22pt;
         font-family: sans-serif, Calibri;
         text-color: #7a7a7a;
         text-align: center;
       }
       .text2 {
         position: relative;
-        top:30px;
+        top: 10px;
         font-size: 18pt;
         font-family: sans-serif, Calibri;
-        color: #ffffff;
+        text-color: #7a7a7a;
         text-align: center;
       }
       
