--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
        }
        
       .text {
+        margin: 30px;
         position: relative;
         top:30px;
         font-size: 20pt;
@@ -42,7 +43,7 @@
     <img src="img/title.png" style="position:relative; top:30px; left:250px;">
     <p class="text">Вам предлагается пройти опрос, который поможет нам лучше узнать эвенский язык. Под каждой картинкой есть окно для ввода, в котором Вам нужно написать название изображенного предмета на эвенском языке.
     <div class="qblock" style="left: 50px">
-      <img src="img/one.jpg" style="position:relative; left:20%; top:20px; width: 300px; height: 300px;">
+      <img src="img/one.jpg" style="position:relative; left:10%; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
