--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <img src="img/title.png" style="position:relative; top:30px; align: center; width: 10%, height: 10%;">
     <p class="text">Вам предлагается пройти опрос, который поможет нам лучше узнать эвенский язык. Под каждой картинкой есть окно для ввода, в котором Вам нужно написать название изображенного предмета на эвенском языке.
     <div class="qblock" style="left: 50px">
-      <img src="img/one.jpg" style="position:relative; left:50; top:20px; width: 300px; height: 300px;">
+      <img src="img/one.jpg" style="position:relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
