--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div style="height: 140px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
     <img src="img/title.png" style="position:relative; top:30px; text-align: center; width: 10%, height: 10%;">
     <p class="text">Вам предлагается пройти опрос, который поможет нам лучше узнать эвенский язык. Под каждой картинкой есть окно для ввода, в котором Вам нужно написать название изображенного предмета на эвенском языке.
-    <div class="qblock" style="left: 50px">
+    <div class="qblock" style="margin: auto;">
       <img src="img/one.jpg" style="position:relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
