--- a/index.html
+++ b/index.html
@@ -36,14 +36,23 @@
         top:30px;
         left:50px;
       }
+      
+      input {
+        width: 300px;
+        font-size: 14pt;
+        font-family: sans-serif, Calibri;
+        text-color: #7a7a7a;
+        padding: 6px 0 4px 10px;
+        border-radius: 9px;
+      }
     </style>
   </head>
   <body>
     <div style="height: 140px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
-    <img src="img/title.png" style="position: relative; text-align: center; top:30px; width: 10%, height: 10%;">
+    <img src="img/title.png" style="position: relative; left: 5%; top:30px; width: 10%, height: 10%;">
     <p class="text">Вам предлагается пройти опрос, который поможет нам лучше узнать эвенский язык. Под каждой картинкой есть окно для ввода, в котором Вам нужно написать название изображенного предмета на эвенском языке.
     <div class="qblock" style="margin: auto;">
-      <img src="img/one.jpg" style="position:relative; left:50px; top:20px; width: 300px; height: 300px;">
+      <img src="img/one.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
