--- a/index.html
+++ b/index.html
@@ -59,5 +59,45 @@
           <p><input type="submit"></p>
        </form>
     </div>
+    <div class="qblock" style="margin: auto;">
+      <img src="img/two.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
+      <form action="https://www.google.com/search">
+          <p class="text2">Как называется этот предмет?</p>
+          <input type="text" name="q">
+          <p><input type="submit"></p>
+       </form>
+    </div>
+    <div class="qblock" style="margin: auto;">
+      <img src="img/three.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
+      <form action="https://www.google.com/search">
+          <p class="text2">Как называется этот предмет?</p>
+          <input type="text" name="q">
+          <p><input type="submit"></p>
+       </form>
+    </div>
+    <div class="qblock" style="margin: auto;">
+      <img src="img/four.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
+      <form action="https://www.google.com/search">
+          <p class="text2">Как называется этот предмет?</p>
+          <input type="text" name="q">
+          <p><input type="submit"></p>
+       </form>
+    </div>
+    <div class="qblock" style="margin: auto;">
+      <img src="img/five.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
+      <form action="https://www.google.com/search">
+          <p class="text2">Как называется этот предмет?</p>
+          <input type="text" name="q">
+          <p><input type="submit"></p>
+       </form>
+    </div>
+    <div class="qblock" style="margin: auto;">
+      <img src="img/six.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
+      <form action="https://www.google.com/search">
+          <p class="text2">Как называется этот предмет?</p>
+          <input type="text" name="q">
+          <p><input type="submit"></p>
+       </form>
+    </div>
   </body>
 </html>
