--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         font-family: sans-serif, Calibri;
         text-color: #7a7a7a;
         padding: 6px 0 4px 10px;
-        border-radius: 9px;
+        border-radius: 15px;
       }
     </style>
   </head>
@@ -59,7 +59,7 @@
           <p><input type="submit"></p>
        </form>
     </div>
-    <div class="qblock" style="margin: auto;">
+    <div class="qblock" style="margin: auto; top: 20px;">
       <img src="img/two.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
@@ -67,7 +67,7 @@
           <p><input type="submit"></p>
        </form>
     </div>
-    <div class="qblock" style="margin: auto;">
+    <div class="qblock" style="margin: auto; top: 20px;">
       <img src="img/three.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
@@ -75,7 +75,7 @@
           <p><input type="submit"></p>
        </form>
     </div>
-    <div class="qblock" style="margin: auto;">
+    <div class="qblock" style="margin: auto; top: 20px;">
       <img src="img/four.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
@@ -83,7 +83,7 @@
           <p><input type="submit"></p>
        </form>
     </div>
-    <div class="qblock" style="margin: auto;">
+    <div class="qblock" style="margin: auto; top: 20px;">
       <img src="img/five.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
@@ -91,7 +91,7 @@
           <p><input type="submit"></p>
        </form>
     </div>
-    <div class="qblock" style="margin: auto;">
+    <div class="qblock" style="margin: auto; top: 20px;">
       <img src="img/six.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
