--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </head>
   <body>
     <div style="height: 140px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
-    <img src="img/title.png" style="position: relative; left: 15%; top:30px; width: 10%, height: 10%;">
+    <img src="img/title.png" style="position: relative; margin-left: auto; margin-right: auto; top:30px; width: 10%, height: 10%;">
     <p class="text">Вам предлагается пройти опрос, который поможет нам лучше узнать эвенский язык. Под каждой картинкой есть окно для ввода, в котором Вам нужно написать название изображенного предмета на эвенском языке.
     <div class="qblock" style="margin: auto;">
       <img src="img/one.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
@@ -96,7 +96,7 @@
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
-          <p><input type="submit"></p>
+          <p class="text2" style="color: #ffffff;">Отправить<input style="background-color: #1E90FF;" type="submit"></p>
        </form>
     </div>
   </body>
