--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
-          <p class="text2" style="color: #ffffff;">Отправить<input style="background-color: #1E90FF;" type="submit"></p>
+          <p><input style="background-color: #1E90FF; сolor: #ffffff;" type="submit"></p>
        </form>
     </div>
   </body>
