--- a/index.html
+++ b/index.html
@@ -49,14 +49,13 @@
   </head>
   <body>
     <div style="height: 160px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
-    <img src="img/title.png" style="position: relative; margin-left: auto; margin-right: auto;">
+    <img src="img/title.png" style="position: relative; margin: auto;">
     <p class="text">Вам предлагается пройти опрос, который поможет нам лучше узнать эвенский язык. Под каждой картинкой есть окно для ввода, в котором Вам нужно написать название изображенного предмета на эвенском языке.
     <div class="qblock" style="margin: auto;">
       <img src="img/one.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
-          <p><input type="submit"></p>
        </form>
     </div>
     <div class="qblock" style="margin: auto; top: 20px;">
@@ -64,7 +63,6 @@
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
-          <p><input type="submit"></p>
        </form>
     </div>
     <div class="qblock" style="margin: auto; top: 20px;">
@@ -72,7 +70,6 @@
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
-          <p><input type="submit"></p>
        </form>
     </div>
     <div class="qblock" style="margin: auto; top: 20px;">
@@ -80,7 +77,6 @@
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
-          <p><input type="submit"></p>
        </form>
     </div>
     <div class="qblock" style="margin: auto; top: 20px;">
@@ -88,7 +84,6 @@
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
-          <p><input type="submit"></p>
        </form>
     </div>
     <div class="qblock" style="margin: auto; top: 20px;">
@@ -96,7 +91,7 @@
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
-          <p><input style="background-color: #1E90FF; сolor: #ffffff;" type="submit"></p>
+          <p><input style="background-color: #1E90FF; text-сolor: #ffffff;" type="submit" value="Отправить"></p>
        </form>
     </div>
   </body>
