--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         position: relative;
         top: 60px;
         width: 400px;
-        height: 500px;
+        height: 450px;
         background-color: #e2e2e2;
        }
        
@@ -79,14 +79,14 @@
           <input type="text" name="q">
        </form>
     </div>
-    <div class="qblock" style="margin: auto; top: 20px;">
+    <div class="qblock" style="margin: auto; top: 40px;">
       <img src="img/five.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
        </form>
     </div>
-    <div class="qblock" style="margin: auto; top: 20px;">
+    <div class="qblock" style="margin: auto; top: 20px; height: 500px;">
       <img src="img/six.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
