--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </head>
   <body>
     <div style="height: 160px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
-    <div style="background-image: url(img/title.png); background-repeat: no repeat; top: 30px; margin: auto;"></div>
+    <div style="background-image: url(img/title.png); background-repeat: no repeat; top: 30px; width: 813px; height: 100px; margin: auto;"></div>
     <img src="img/title.png" style="position: relative; margin: auto;">
     <p class="text">Вам предлагается пройти опрос, который поможет нам лучше узнать эвенский язык. Под каждой картинкой есть окно для ввода, в котором Вам нужно написать название изображенного предмета на эвенском языке.
     <div class="qblock" style="margin: auto;">
