--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
   <body>
     <div style="height: 160px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
     <div style="background-image: url(img/title.png); background-repeat: no repeat; top: 30px; width: 813px; height: 100px; margin: auto;"></div>
-    <img src="img/title.png" style="position: relative; margin: auto;">
     <p class="text">Вам предлагается пройти опрос, который поможет нам лучше узнать эвенский язык. Под каждой картинкой есть окно для ввода, в котором Вам нужно написать название изображенного предмета на эвенском языке.
     <div class="qblock" style="margin: auto;">
       <img src="img/one.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
@@ -59,35 +58,35 @@
           <input type="text" name="q">
        </form>
     </div>
-    <div class="qblock" style="margin: auto; top: 10px;">
+    <div class="qblock" style="margin: auto; margin-top: 20px;">
       <img src="img/two.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
        </form>
     </div>
-    <div class="qblock" style="margin: auto; top: 11px;">
+    <div class="qblock" style="margin: auto; margin-top: 20px;">
       <img src="img/three.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
        </form>
     </div>
-    <div class="qblock" style="margin: auto; top: 10px;">
+    <div class="qblock" style="margin: auto; margin-top: 20px;">
       <img src="img/four.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
        </form>
     </div>
-    <div class="qblock" style="margin: auto; top: 11px;">
+    <div class="qblock" style="margin: auto; margin-top: 20px;">
       <img src="img/five.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
        </form>
     </div>
-    <div class="qblock" style="margin: auto; top: 10px; height: 500px;">
+    <div class="qblock" style="margin: auto; margin-top: 20px; height: 500px;">
       <img src="img/six.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
