--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       .qblock {
         padding: 50px;
         position: relative;
-        top: 60px;
+        top: 40px;
         width: 400px;
-        height: 450px;
+        height: 420px;
         background-color: #e2e2e2;
        }
        
@@ -49,7 +49,7 @@
   </head>
   <body>
     <div style="height: 160px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
-    <div style="background-image: url(img/title.png); background-repeat: no repeat; top: 30px; width: 813px; height: 100px; margin: auto;"></div>
+    <div style="background-image: url(img/title.png); background-repeat: no repeat; top: 30px; width: 813px; height: 100px; margin: auto; margin-bottom: 40px"></div>
     <p class="text">Вам предлагается пройти опрос, который поможет нам лучше узнать эвенский язык. Под каждой картинкой есть окно для ввода, в котором Вам нужно написать название изображенного предмета на эвенском языке.
     <div class="qblock" style="margin: auto;">
       <img src="img/one.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
