--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       .qblock {
         padding: 50px;
         position: relative;
-        top: 40px;
+        top: -10px;
         width: 400px;
         height: 420px;
         background-color: #e2e2e2;
@@ -17,7 +17,7 @@
       .text {
         margin: 60px;
         position: relative;
-        top:10px;
+        top: -40px;
         font-size: 20pt;
         font-family: sans-serif, Calibri;
         text-color: #7a7a7a;
@@ -49,7 +49,7 @@
   </head>
   <body>
     <div style="height: 160px; width:100%; background-image: url(img/uzor.png); background-repeat: repeat-x;"></div>
-    <div style="background-image: url(img/title.png); background-repeat: no repeat; top: 30px; width: 813px; height: 100px; margin: auto; margin-bottom: 40px"></div>
+    <div style="background-image: url(img/title.png); background-repeat: no repeat; top: 30px; width: 813px; height: 100px; margin: auto;"></div>
     <p class="text">Вам предлагается пройти опрос, который поможет нам лучше узнать эвенский язык. Под каждой картинкой есть окно для ввода, в котором Вам нужно написать название изображенного предмета на эвенском языке.
     <div class="qblock" style="margin: auto;">
       <img src="img/one.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
