--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       .qblock {
         padding: 50px;
         position: relative;
-        top: -10px;
+        top: -20px;
         width: 400px;
         height: 420px;
         background-color: #e2e2e2;
@@ -41,7 +41,6 @@
         width: 300px;
         font-size: 14pt;
         font-family: sans-serif, Calibri;
-        text-color: #7a7a7a;
         padding: 6px 0 4px 10px;
         border-radius: 15px;
       }
@@ -91,7 +90,7 @@
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
-          <p><input style="background-color: #1E90FF; text-сolor: #ffffff;" type="submit" value="Отправить"></p>
+          <p><input style="background-color: #1E90FF; сolor: #ffffff;" type="submit" value="Отправить"></p>
        </form>
     </div>
   </body>
