--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="q">
-          <p><input style="background-color: #4682B4; сolor: #ffffff;" type="submit" value="Отправить"></p>
+          <p><input style="background-color: #4682B4;" type="submit" value="Отправить"></p>
        </form>
     </div>
   </body>
