--- a/index.html
+++ b/index.html
@@ -54,42 +54,47 @@
       <img src="img/one.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
-          <input type="text" name="q">
+          <input type="text" name="one">
+          <p><input style="background-color: #4682B4;" type="submit" value="Отправить"></p>
        </form>
     </div>
     <div class="qblock" style="margin: auto; margin-top: 20px;">
       <img src="img/two.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
-          <input type="text" name="q">
+          <input type="text" name="two">
+          <p><input style="background-color: #4682B4;" type="submit" value="Отправить"></p>
        </form>
     </div>
     <div class="qblock" style="margin: auto; margin-top: 20px;">
       <img src="img/three.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
-          <input type="text" name="q">
+          <input type="text" name="three">
+          <p><input style="background-color: #4682B4;" type="submit" value="Отправить"></p>
        </form>
     </div>
     <div class="qblock" style="margin: auto; margin-top: 20px;">
       <img src="img/four.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
-          <input type="text" name="q">
+          <input type="text" name="four">
+          <p><input style="background-color: #4682B4;" type="submit" value="Отправить"></p>
        </form>
     </div>
     <div class="qblock" style="margin: auto; margin-top: 20px;">
       <img src="img/five.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
-          <input type="text" name="q">
+          <input type="text" name="five">
+          <p><input style="background-color: #4682B4;" type="submit" value="Отправить"></p>
        </form>
     </div>
     <div class="qblock" style="margin: auto; margin-top: 20px; height: 500px;">
       <img src="img/six.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
-          <input type="text" name="q">
+          <input type="text" name="six">
           <p><input style="background-color: #4682B4;" type="submit" value="Отправить"></p>
        </form>
     </div>
