--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         position: relative;
         top: -20px;
         width: 400px;
-        height: 420px;
+        height: 500px;
         background-color: #e2e2e2;
        }
        
@@ -43,6 +43,16 @@
         font-family: sans-serif, Calibri;
         padding: 6px 0 4px 10px;
         border-radius: 15px;
+      }
+      
+      .button {
+        position: relative;
+        top: -50;
+        margin: auto;
+        width: 150px;
+        height: 50px;
+        background-color: #4682B4;
+        border-radius: 20px;
       }
     </style>
   </head>
@@ -90,7 +100,7 @@
           <p><input style="background-color: #4682B4;" type="submit" value="Отправить"></p>
        </form>
     </div>
-    <div class="qblock" style="margin: auto; margin-top: 20px; height: 500px;">
+    <div class="qblock" style="margin: auto; margin-top: 20px;">
       <img src="img/six.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
@@ -98,5 +108,6 @@
           <p><input style="background-color: #4682B4;" type="submit" value="Отправить"></p>
        </form>
     </div>
+    <div class="button"></div>
   </body>
 </html>
