--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
       
       .button {
         position: relative;
-        top: -50;
+        top: -10;
         margin: auto;
-        width: 150px;
-        height: 50px;
+        width: 350px;
+        height: 70px;
         background-color: #4682B4;
         border-radius: 20px;
+        padding: 20px;
       }
     </style>
   </head>
@@ -105,9 +106,11 @@
       <form action="https://www.google.com/search">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="six">
-          <p><input style="background-color: #4682B4;" type="submit" value="Отправить"></p>
+          <p><input style="background-color: #4682B4; color: white;" type="submit" value="Отправить"></p>
        </form>
     </div>
-    <div class="button"></div>
+    <div class="button">
+      <p class="text2" style="color: white;">Статистика</p>
+    </div>
   </body>
 </html>
