--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       
       .button {
         position: relative;
-        top: -10;
+        top: 40px;
         margin: auto;
         width: 350px;
-        height: 70px;
+        height: 40px;
         background-color: #4682B4;
         border-radius: 20px;
         padding: 20px;
@@ -110,7 +110,7 @@
        </form>
     </div>
     <div class="button">
-      <p class="text2" style="color: white;">Статистика</p>
+      <p class="text2" style="color: white; text-align: center; weight: bold;">Статистика</p>
     </div>
   </body>
 </html>
