--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
        </form>
     </div>
     <div class="button">
-      <p class="text2" style="color: white; text-align: center; weight: bold;">Статистика</p>
+      <p class="text2" style="color: white; text-align: center; weight: bold; font-size: 22pt;">Статистика</p>
     </div>
   </body>
 </html>
