--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         background-color: #4682B4;
         border-radius: 20px;
         padding: 20px;
+        margin-bottom: 70px;
       }
     </style>
   </head>
@@ -110,7 +111,7 @@
        </form>
     </div>
     <div class="button">
-      <p class="text2" style="color: white; text-align: center; vertical-align: center; weight: bold; font-size: 22pt; margin-bottom: 70px;">Статистика</p>
+      <p class="text2" style="color: white; text-align: center; vertical-align: center; weight: bold; font-size: 22pt;">Статистика</p>
     </div>
   </body>
 </html>
