--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
         height: 40px;
         background-color: #4682B4;
         border-radius: 20px;
-        padding: 20px;
         margin-bottom: 70px;
       }
     </style>
@@ -111,7 +110,7 @@
        </form>
     </div>
     <div class="button">
-      <p class="text2" style="color: white; text-align: center; vertical-align: center; weight: bold; font-size: 22pt;">Статистика</p>
+      <p class="text2" style="color: white; text-align: center; weight: bold; font-size: 22pt; padding: 20px">Статистика</p>
     </div>
   </body>
 </html>
