--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <div class="qblock" style="margin: auto; margin-top: 20px;">
       <img src="img/two.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
-      <form action="https://www.google.com/search">
+        <form action="/results">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="two">
           <p><input style="background-color: #4682B4;" type="submit" value="Отправить"></p>
@@ -79,7 +79,7 @@
     </div>
     <div class="qblock" style="margin: auto; margin-top: 20px;">
       <img src="img/three.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
-      <form action="https://www.google.com/search">
+        <form action="/results">
           <p class="text2">Как называется этот предмет?</p>
           <input type="text" name="three">
           <p><input style="background-color: #4682B4;" type="submit" value="Отправить"></p>
