--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
     </form>
     <div class="button">
-      <p class="text2" style="color: white; text-align: center; weight: bold; font-size: 22pt; padding: 20px">Статистика</p>
+      <p class="text2" style="color: white; text-align: center; weight: bold; font-size: 22pt;">Статистика</p>
     </div>
   </body>
 </html>
