--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         position: relative;
         top: -20px;
         width: 400px;
-        height: 450px;
+        height: 420px;
         background-color: #e2e2e2;
        }
        
@@ -64,33 +64,34 @@
     <form action="/results">
       <div class="qblock" style="margin: auto;">
         <img src="img/one.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
-        <p class="text2">Как называется этот предмет?</p>
-        <input type="text" name="one">
+        <p class="text2" style="left:50px">Как называется этот предмет?</p>
+        <input style="left:50px" type="text" name="one">
       </div>
       <div class="qblock" style="margin: auto; margin-top: 20px;">
         <img src="img/two.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
-        <p class="text2">Как называется этот предмет?</p>
+        <p style="left:50px" class="text2">Как называется этот предмет?</p>
         <input type="text" name="two">
       </div>
       <div class="qblock" style="margin: auto; margin-top: 20px;">
         <img src="img/three.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
-          <p class="text2">Как называется этот предмет?</p>
-          <input type="text" name="three">
+          <p style="left:50px" class="text2">Как называется этот предмет?</p>
+          <input style="left:50px" type="text" name="three">
       </div>
       <div class="qblock" style="margin: auto; margin-top: 20px;">
         <img src="img/four.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
           <p class="text2">Как называется этот предмет?</p>
-          <input type="text" name="four">
+          <input style="left:50px" type="text" name="four">
       </div>
       <div class="qblock" style="margin: auto; margin-top: 20px;">
         <img src="img/five.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
-          <p class="text2">Как называется этот предмет?</p>
-          <input type="text" name="five">
+          <p style="left:50px" class="text2">Как называется этот предмет?</p>
+          <input style="left:50px" type="text" name="five">
       </div>
       <div class="qblock" style="margin: auto; margin-top: 20px;">
         <img src="img/six.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
-          <p class="text2">Как называется этот предмет?</p>
-          <input type="text" name="six">
+          <p style="left:50px" class="text2">Как называется этот предмет?</p>
+          <input style="left:50px" type="text" name="six">
+          <input style="left:50px" type="submit" value="Отправить">
       </div>
     </form>
     <div class="button">
