--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <img src="img/six.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
           <p style="left:50px" class="text2">Как называется этот предмет?</p>
           <input style="left:50px" type="text" name="six">
-          <input style="left:50px" type="submit" value="Отправить">
+          <input style="left:100px; top: 20px; width: 300px" type="submit" value="Отправить">
       </div>
     </form>
     <div class="button">
