--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="qblock" style="margin: auto;">
         <img src="img/one.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
         <p class="text2" style="left:50px">Как называется этот предмет?</p>
-        <input style="left:50px" type="text" name="one">
+        <input style="margin-left:50px" type="text" name="one">
       </div>
       <div class="qblock" style="margin: auto; margin-top: 20px;">
         <img src="img/two.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
@@ -87,7 +87,7 @@
           <p style="left:50px" class="text2">Как называется этот предмет?</p>
           <input style="left:50px" type="text" name="five">
       </div>
-      <div class="qblock" style="margin: auto; margin-top: 20px;">
+      <div class="qblock" style="margin: auto; margin-top: 20px;; height: 500px;">
         <img src="img/six.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
           <p style="left:50px" class="text2">Как называется этот предмет?</p>
           <input style="left:50px" type="text" name="six">
