--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       }
       
       input {
+        position: relative;
         width: 300px;
         font-size: 14pt;
         font-family: sans-serif, Calibri;
