--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
       <div class="qblock" style="margin: auto; margin-top: 20px;">
         <img src="img/four.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
-          <p class="text2">Как называется этот предмет?</p>
+          <p class="text2" style="left:50px">Как называется этот предмет?</p>
           <input style="left:50px" type="text" name="four">
       </div>
       <div class="qblock" style="margin: auto; margin-top: 20px;">
@@ -92,7 +92,7 @@
         <img src="img/six.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
           <p style="left:50px" class="text2">Как называется этот предмет?</p>
           <input style="left:50px" type="text" name="six">
-          <input style="left:100px; top: 20px; width: 300px; background-color: white;" type="submit" value="Отправить">
+          <input style="left:50px; top: 20px; width: 300px; background-color: white;" type="submit" value="Отправить">
       </div>
     </form>
     <div class="button">
