--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="qblock" style="margin: auto; margin-top: 20px;">
         <img src="img/two.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
         <p style="left:50px" class="text2">Как называется этот предмет?</p>
-        <input type="text" name="two">
+        <input style="left:50px" type="text" name="two">
       </div>
       <div class="qblock" style="margin: auto; margin-top: 20px;">
         <img src="img/three.jpg" style="position: relative; left:50px; top:20px; width: 300px; height: 300px;">
@@ -95,8 +95,8 @@
           <input style="left:50px; top: 20px; width: 300px; background-color: white;" type="submit" value="Отправить">
       </div>
     </form>
-    <div class="button">
-      <p class="text2" style="color: white; text-align: center; weight: bold; font-size: 22pt; margin-bottom: 20px">Статистика</p>
+    <div class="button" style="left:50px">
+      <p class="text2" style="color: white; text-align: center; weight: bold; font-size: 22pt; margin-bottom: 40px">Статистика</p>
     </div>
   </body>
 </html>
